# cap

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/claude_platform/: bundles.py  cli.py  client.py  config.py  errors.py  render.py  resources.py  safety.py  vcs.py  workspace.py
tests/: test_bundles.py  test_cli_agents_versions.py  test_cli_deployment_runs.py  test_cli_deployments_actions.py  test_cli_environments_work.py  test_cli_init.py  test_cli_memory_stores_memories.py  test_cli_memory_versions.py  test_cli_resources.py  test_cli_sessions_resources.py  test_cli_sessions_threads.py  test_cli_sessions_threads_events.py  test_cli_skills_versions.py  test_cli_user_profiles.py  test_cli_vaults_credentials.py  test_cli_workspace_export.py  test_client.py  test_config.py  test_errors.py  test_render.py  test_resources.py  test_safety.py  test_sdk_contract.py  test_shell.py  test_vcs.py
